test/types/type_variables/diten/typeTupleOOB.4.good
typeTupleOOB.chpl:4: error: type index expression '4' out of bounds (0..2)
