test/types/type_variables/diten/typeTupleOOB.chpl
config param idx = 0;
type t = (int, real, string);

writeln(t(idx):string);
